--- a/gb/25/11/17/n14637480.md
+++ b/gb/25/11/17/n14637480.md
@@ -1,7 +1,103 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><ahref="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><ahref="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><ahref="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><ahref="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><ahref="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><ahref="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><ahref="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><ahref="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><ahref="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><ahref="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>川普推50年期房贷 优劣一次搞懂</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2025/11/id14637505-0ed089de69db418b402923ed0dae96dc.jpeg" class="" data-thumbnail="true" />
-<h6></h6>
+<tr><td VALIGN=TOP width="626"><h2 align=center>川普推50年期房贷 哪些人更适合申请？</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2025/11/id14637505-0ed089de69db418b402923ed0dae96dc-600x400.jpeg" />
+<h6>现在利率高，房贷压力大，让美国人不敢买房。（Shutterstock）</h6>
 <hr>
+	<p>【大纪元2025年11月17日讯】美国房价太高、房贷利率让人喘不过气，年轻人买不起房，美国人的首次购房年龄逐渐加大！这些都是现在美国房市的残酷现实，到底要如何解套？</p>
+<p>最近美国总统川普（特朗普）直接喊出：50年期房贷计划，要让大家的房贷月还款压力瞬间减轻！这真的是目前购房痛点的解决方式吗？有没有什么风险？你会适合50年房贷吗？这次，我就来分析各种优缺点，哪些人会更适合申请？</p>
+<p>川普是在今年美东时间11月8日，首次抛出“50年期房贷”构想——他在自家的社群平台Truth Social上<ahref="https://truthsocial.com/@realDonaldTrump/posts/115515420947464459" target="_blank" rel="noopener">贴出图文</a>，表示支持让美国人可以使用50年期房贷。</p>
+<p>这张图左边肖像是罗斯福总统，上头写着的“30年期房贷”；右边是川普总统，写着的“50年期房贷”。这样做是为了将这一理念与罗斯福的“30年抵押贷款”计划联系起来，该计划是罗斯福著名的“新政”计划的一部分，用来帮助美国人在20世纪40年代，更容易负担得起住房。</p>
+<p>隔天11月9日，他又在Fox News专访中重申这个50年期房贷想法，才正式在政经圈引爆大量讨论。</p>
+<p>联邦住房金融局（FHFA）局长比尔?普尔特（Bill Pulte），证实了川普正在考虑这个想法，他在X上转发了<ahref="https://x.com/pulte/status/1987228558226280813" target="_blank" rel="noopener">这张图表</a>，并写道：“感谢川普总统，我们确实正在研究50年期抵押贷款——这将彻底改变游戏规则。”</p>
+<h2>川普为何提出50年期房贷？</h2>
+<p>川普为何提出50年期房贷？简单说，当然是让美国人更容易负担起买房的压力，背后的理念是为购屋者，提供更多的时间来偿还房屋贷款。它直接把贷款年期拉长，能把每月月供压低，扩大边际买家的资格与购买力，被视为“快速”的需求端纾困工具。</p>
+<p>而且，白宫和联邦住房金融局，把此案定位为改善年轻人购屋可及性、让“先上车”成为更容易的选项。住房危机之下，相较于政府直接补贴，仅需调整贷款条件，利用金融手段改变规则，理论上能在不编列庞大预算下，扩大信贷供给、带动成交。</p>
+<p><span style="color: #0000ff;">川普推50年房贷真的香？首10年有这个陷阱！买房族小心｜50年房贷：五种人很适合、五种人不宜 一次看懂 #美国地产热点 第216集</span><br />
+<a title="YouTube video player" loading="lazy" data2-src=""></a><a href="https://d37g5boc7rm625.cloudfront.net/J3eW8L5nwMCu"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/uwmJUxiSlvk?si=UmvC9q_c9Oh8QQmN" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<h2>50年房贷的好处</h2>
+<p>那么50年房贷真的能改善民众的可负担性，再次启动房地产市场吗？以下先来分析申请50年房贷会有哪些好处？</p>
+<p>最显着的好处，当然是每月月供压低，改善现金流压力与“每月可负担上限”。假设贷款60万、年利率6.5%，申请30年房贷，每个月约支出$3,792；50年房贷支出约$3,382，即是每个月减少$410。</p>
+<p>对高房价都会区，月付高是硬限制，50年期等于把入场门槛往下压，让“先上车、之后再转贷”变得更可行，尤其是首次购房者。日后若利率下行或有更划算的产品出现，可再融资把年期、利率调整。50年期在高利时期可作为“过渡解方”。</p>
+<p>另外，月供变低可直接拉低债务占收入比（DTI），让本来“卡在临界”的买家更容易过件或借到更高额度。还可以把节省的月供，用于买点数降息、拉高头款或做关键维修，以提升长期持有品质。</p>
+<p>对投资者来说，相同租金下，月供越低，净现金流更容易达到银行贷款门槛、扩大杠杆或多屋布局。因此，计算DSCR（Debt Service Coverage Ratio，偿债覆盖率），50年房贷更容易达到大于1的比率，也就是租金更能够覆盖贷款支出和营运费用，造成正现金流。</p>
+<h2>50年房贷的风险</h2>
+<p>现在来说说，50年房贷的不利或是风险。第一个不利就是“总利息暴增”，拉长年期，等于利息期数变多；即便利率一样，终身利息会远高于30年期。</p>
+<p>用刚刚的60万房贷来计算，30年期的第一期“本金”约$542（美元，下同）；40年期，第一期本金约$263；50年期，第一期本金只有约article content begin -->32。显而易见，期数越长，月付越接近“只付利息”的水准，起初能挪去还本金的金额就越少，因此本金下降很慢，前5～10年大多都在支付利息，造成净值成长迟缓。</p>
+<p>计算偿还十年后，30年期的本金余额是$508,657，但是50年的本金还有$577,720。</p>
+<p>所以，日后要做房屋净值信用额度（HELOC），或是现金再融资的杠杆，就可能会受到限制。只有随着时间推进，利息占比递减，余额慢慢下降，利息就变少，固定月付中能分到本金的部分才会越来越多。</p>
+<p>再来，因为本金降得慢，假如碰上市场下修时期，更容易出现房价低于贷款余额。还有，因为拉长年期、投资人要求补偿，造成实际利率或点数可能不比30年期低，形成贷款成本偏高的风险。</p>
+<p>很多专家也担忧，这个政策可能带来“需求端刺激”的副作用，在供给紧缺的房市之下，需求增加可能推升房价，把省下的月付让渡回市场价格。如此一来，反而达不到原本的降低可负担性目的。</p>
+<h2>适用于哪些人？</h2>
+<p>看完以上的优缺点，可以知道50年房贷比较像是“现金流工具”，不是“快速累积资产的工具”。所以它相对适合的是——“月付压力敏感、打算长期持有、重视现金流”的人，而不是“想快快还完、快速增值、短期进出”的人。理论上它会更适合于以下五种人群：</p>
+<figure id="attachment_14637506" aria-describedby="caption-attachment-14637506" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/11/id14637506-a0696fbf0764220fafdee8dcaabdf7ba.jpeg"><img decoding="async" class="size-large wp-image-14637506" src="https://i.epochtimes.com/assets/uploads/2025/11/id14637506-a0696fbf0764220fafdee8dcaabdf7ba-600x387.jpeg" alt="" width="600" b="387" /></a><figcaption id="caption-attachment-14637506" class="wp-caption-text">美国总统川普打算推出50年期房贷，解决美国人尤其是年轻族群买房的压力。（Shutterstock）</figcaption></figure>
+<h3><em>一、手头没那么宽裕的自住族</em></h3>
+<p>?首购族、年纪较轻的族群，二十多、三十岁出头。有望拉低现在美国首购族年龄往上攀升的问题。<br />
+?在高房价区，如湾区、纽约、洛杉矶或许能起到一定作用。<br />
+?目前收入稳定，但小孩托育、教育支出压力大、手上还有学贷或车贷的族群。<br />
+换句话说，这类族群比较适合那种：“我就是要在这个城市长住很久、搬家频率不高”的家庭。</p>
+<h3><strong><em>二、预期未来收入成长空间大的族群</em></strong></h3>
+<p>?还在职涯快速上升期的医生、工程师、律师、科技业。<br />
+?目前薪水过得去，但未来5～10年有明显加薪、升职，甚至有首次公开募股IPO /红利 （bonus）成长机会的人。</p>
+<h3><em>三、重视“现金流”的房地产投资人</em></h3>
+<p>如果是买出租房、投资房，50年房贷对某些人很有吸引力，因为它会拉低每月本息，提高DSCR（债务偿付比），让物业比较容易有租金正现金流。特别是准备买多户、联排，或小型公寓的长期持有型投资人，并且打算持有10年以上，而不是3～5年就转售的那种投资者。</p>
+<h3><em>四、有其它高报酬投资机会的人</em></h3>
+<p>?创业者：需要大量资金投入公司。<br />
+?积极投资股市、私募、自己专业领域，长期报酬率有机会大于房贷利率。<br />
+这群人会把50年房贷当成：“我用最低的月付，把资金留在报酬更高的地方工作。”优点是现金流最大化、房贷变成“便宜的长期资金来源”。</p>
+<h3><em>五、把房子当“世代资产”的人</em></h3>
+<p>?打算持有房产30年以上，最后留给小孩，不执著“一定要还清”。<br />
+?本身就习惯长期持有，不卖房（例如只靠租金＋升值）。<br />
+对这类家庭来说：50年房贷与其说是“要还完”，不如说是“确保现金流稳定，房子可以一直供着”。房贷压力小，遇到景气不好或失业，也比较有缓冲空间。</p>
+<h2>不适用于哪些人？</h2>
+<p>反过来说，哪些人“不那么适合”50年房贷？也有以下五种：</p>
+<h3><em>一、距离退休不远的人</em></h3>
+<p>例如，50岁才贷50年，理论上要还到100岁，这就不现实。还有，退休收入通常会下降，长债压力反而变大。</p>
+<h3><em>二、收入不稳、经济压力已经很大的人</em></h3>
+<p>如果是为了“硬撑买昂贵的房子”才用50年，那比较像延长痛苦，而不是降低风险。</p>
+<h3><em>三、打算几年内年就卖房的人</em></h3>
+<p>因为前期几乎都在付利息，本金下降慢，房屋净值难上涨，短期转售获利不高。尤其是再扣掉中介费、税费、过户成本，口袋里可能没留下什么资金。</p>
+<h3><em>四、非常在意“无债一身轻”的人</em></h3>
+<p>假如你心理上很在乎“几岁前一定要还清”，那50年房贷只会让你每天更焦虑。</p>
+<h3><em>五、理财纪律不足的人</em></h3>
+<p>如果本来打算用剩余的资金，拿去投资或提前还本金，结果全部拿去消费或生活升级，长期下来就是“高利息、没资产”的最糟组合。</p>
+<p>总的来说，50年房贷比较适合：收入能够支付生活开销、但对月付压力敏感、打算长期持有、且能有纪律运用多出来现金流的人。而不适合：短期炒房、接近退休、或只是想用更长年限硬撑高价房的人。</p>
+<h2>50年房贷落地 仍有难度</h2>
+<p>尽管，现在川普已经喊出这个计划，但距离落实还有一段路要走。现在规则写着：合格房贷QM（Qualified Mortgage）最长30年。要变50年就必须得先改这条规则，不改的话，银行做了风险很大、投资人也不爱买。</p>
+<p>房地美、房利美这两家全美最大的“房贷批发商”，目前他们只收≤30年的贷款。要普及50年期，他们的“收货规则”就要改，不然市场没有大买家，价格会很贵、量也出不来。因此，FHFA得先允许两房收购或证券化超过30年的房贷。</p>
+<p>而且，原则上50年票面久期更长、预付不确定性更大，投资人多半会要求更高利差与流动性补偿；在两房和Ginnie Mae尚未承接前，市场很难形成大规模、低成本的资金来源。</p>
+<p>因此，要达到这一切，总统、白宫、监管机关、国会、两房与各部会要口径一致。并且，最末端的银行也要重做合约、摊还表、风控模型、提前清偿条款、IT系统和员工训练等等。</p>
+<p>最后，截至11月10日的一周，房地美公布30年期房贷利率，平均6.24%。未来50年房贷如果真正落地，很大概率利率会更高一些。◇</p>
+<p>责任编辑：李曜宇#</p>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414940.md#1">农民工讨薪 厦门象屿集团动用高压水枪驱逐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568122.md#1">四川江油校园霸凌引发大规模抗议 海外声援</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/11/n9829932.md#1" target="_blank">杨宁：邓小平妻兄服毒自尽 两连襟被迫害死</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/8/n11098363.md#1" target="_blank">美国际宗教自由大使访港 促停止迫害法轮功</a></li><hr>
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/11/17/n14637480.htm">川普推50年期房贷 哪些人更适合申请？</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637480.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
